--- a/TunisiaCamp/src/styles.css
+++ b/TunisiaCamp/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
+@import url('~@fortawesome/fontawesome-free/css/all.min.css');
