site logo update

--- a/TunisiaCamp/src/nav-bar/nav-bar.component.html
+++ b/TunisiaCamp/src/nav-bar/nav-bar.component.html
@@ -1,12 +1,12 @@
 <nav>
-  <a href="#">Kero<span>sz</span></a>
+  <a href="#">Tunisia<span>Camp</span></a>
   <div class="menu">
     <div class="hamburger"></div>
   </div>
   <ul id="show">
-    <li><a href="#" class='active'>Home</a></li>
+    <li><a href="#">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="#">Work</a></li>
+    <li><a href="#" class='active'>Shop</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
 </nav>
