--- a/TunisiaCamp/src/app/app.component.html
+++ b/TunisiaCamp/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav-bar></app-nav-bar>
 <app-product-card></app-product-card>
 <app-shopping-cart></app-shopping-cart>
+<app-footer></app-footer>
